# emby-cli

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml
man/man1/: emby.1
src/: cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs
src/commands/: activity.rs  devices.rs  find_server.rs  latest.rs  libraries.rs  mod.rs  next_up.rs  playing.rs  restart.rs  scan.rs  search.rs  system.rs  tasks.rs  upcoming.rs  users.rs
src/emby/: mod.rs  ticks.rs  types.rs  users.rs
src/format/: color.rs  mod.rs  playing.rs  table.rs
tests/: commands_test.rs  config_test.rs  playing_test.rs  types_test.rs
tests/fixtures/: activity_log.json  devices.json  latest_items.json  libraries.json  next_up.json  scheduled_tasks.json  search_hints.json  sessions.json  system_info.json  upcoming.json  users.json
