[package]
name = "emby-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Joshua Priddle <jpriddle@me.com>"]

[[bin]]
name = "emby"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }
thiserror = "2"
owo-colors = "4"
comfy-table = "7"
crossterm = "0.29"

[dev-dependencies]
assert_cmd = "2"
mockito = "1"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
